--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -3,6 +3,7 @@
 
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
+
 <!-- Metis Menu Plugin JavaScript -->
 @Scripts.Render("~/Content/adminsb/vendor/metisMenu/metisMenu.min.js")
 
@@ -13,4 +14,5 @@
 @Scripts.Render("~/Content/adminsb/vendor/morrisjs/morris.min.js")
 @Scripts.Render("~/Content/adminsb/data/morris-data.js")
 @Scripts.Render("~/bundles/ajax")
+@Scripts.Render("~/Content/css")
 
