--- a/OctagonPlatform/Views/Account/Login.cshtml
+++ b/OctagonPlatform/Views/Account/Login.cshtml
@@ -14,6 +14,7 @@
     {
         <h2 class="text-warning text-center" >@ViewBag.Message</h2>
         @Html.AntiForgeryToken()
+        @Html.HiddenFor(m => m.TriesToLogin)
         <div class="form-horizontal">
 
             <h5>@ViewBag.Msg</h5>
