--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿
+@using System.IdentityModel.Tokens
 @model IEnumerable<OctagonPlatform.Models.Partner>
 
 @{
@@ -6,39 +7,39 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<div class="page-header">
-    <h3 class="panel-title">List Partners</h3>
-</div>
-    <p>
-        @Html.ActionLink("Add Partner", "Create", "Partners", routeValues:null, htmlAttributes: new{@class = "glyphicon glyphicon-plus-sign" })
-    </p>
+<h2>List of Partners</h2>
+<p>
+    @Html.ActionLink("Add Partner", "Create", "Partners", routeValues:null, htmlAttributes: new{@class = "btn btn-info" })
+</p>
+<h3>@ViewBag.Error</h3>
 <table class="table table-striped table-hover ">
+    
     <thead>
-    <tr>
+    <tr class="danger">
         <th>Parent</th>
         <th>Business Name</th>
         <th>Address</th>
-        <th>Work Phone</th>
+        <th>Phone</th>
         <th>Email</th>
         <th>Status</th>
     </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr class="info">
-                <td>@item.Parent.BusinessName</td>
-                <td>@item.BusinessName</td>
-                <td>@item.Address1</td>
-                <td>@item.WorkPhone</td>
-                <td>@item.Email</td>
-                <td>@item.Status</td>
-                <td>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
-                <td>@Html.ActionLink("Delete", "Delete", new { id = item.Id })</td>
-                <td>@Html.ActionLink("Details", "Details", new { id = item.Id })</td>
-            </tr>
-        }
-    
+    @foreach (var item in Model)
+    {
+        <tr class="active">
+            <td>@item.Parent.BusinessName</td>
+            <td>@item.BusinessName</td>
+            <td>@item.Address1</td>
+            <td>@item.Mobile</td>
+            <td>@item.Email</td>
+            <td>@item.Status</td>
+            <td>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
+            <td>@Html.ActionLink("Delete", "Delete", new { id = item.Id})</td>
+            <td>@Html.ActionLink("Details", "Details", new {id = item.Id})</td>
+        </tr>
+    }
+
 </table> 
         
 
