--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -1,40 +1,15 @@
-﻿<!-- Navigation -->
+﻿
 <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-    <!-- /.navbar-header -->
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        @Html.ActionLink("Octagon Platform", "Index", "Dashboard", routeValues: null, htmlAttributes: new { @class = "navbar-brand" })
+    <div>
+        <img src="~/Uploads/@Session["logo"]" width="200" height="100" alt="" class="img-responsive img-rounded">
     </div>
-    @*<!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="DashBoard"><i class="fa fa-dashboard fa-fw"></i> Dashboard<span class="sr-only">(current)</span></a></li>
-            
-            <li><a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts</a></li>
-            <li><a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="caret"></span></a>
+    <div class="navbar-header">
 
-                <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">One more separated link</a></li>
-                </ul>
-            </li>
-        </ul>
-       
-  
-    </div><!-- /.navbar-collapse -->*@
-    <!-- /.navbar-top-links -->
+
+        @Html.ActionLink(Session["businessName"].ToString(), "Index", "Dashboard","", htmlAttributes: new { @class = "navbar-brand" })
+
+    </div>
+
     <ul class="nav navbar-top-links navbar-right">
       
         <li class="dropdown">
@@ -57,7 +32,7 @@
                             <li>
                                 @using (Html.BeginForm("", "", FormMethod.Post, new { @class = "navbar-right" }))
                                 {  @Html.AntiForgeryToken()
-                                    @Html.ActionLink("Profile", "", "")}
+                                    @Html.ActionLink("Profile", "Details", "Partners", new {id = @Session["partnerId"]}, "")}
                                     </li>
                 </ul>
                 
