--- a/OctagonPlatform/Views/Logos/Index.cshtml
+++ b/OctagonPlatform/Views/Logos/Index.cshtml
@@ -10,8 +10,14 @@
 {
     @Html.AntiForgeryToken()
 
-    
-    <input type="file" name="file" /> 
+    <div class="form-group">
+       <input class="form-control" type="file" name="file" /> 
+    </div>
     <br/>
-    <button type="submit" class="btn btn-primary">Upload File</button>
+    <div class="form-group">
+        <div class="col-lg-10 col-lg-offset-2">
+            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+            <button type="submit" class="btn btn-primary">Upload</button>
+        </div>
+    </div>
 }
