--- a/OctagonPlatform/Views/Users/Edit.cshtml
+++ b/OctagonPlatform/Views/Users/Edit.cshtml
@@ -68,7 +68,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Save</button>
-    
+
     <table class="table table-striped table-hover ">
         <thead>
             <tr>
@@ -81,23 +81,24 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.Permissions)
+            @foreach (var item in Model.SetOfPermissions)
             {
                 <tr>
-                    <td>@Html.CheckBox(item.Name);</td>
-                    <td>@Html.CheckBox(item.Name);</td>
-                    <td>@Html.CheckBox(item.Name);</td>
-                    <td>@Html.CheckBox(item.Name);</td>
-                    <td>@Html.CheckBox(item.Name);</td>
+                    <td>@Html.Label(item.Name)</td>
+                    <td><input type="checkbox" name="Permissions1" value=" " /></td>
+                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Id" /></td>
+                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="View").Id" /></td>
+                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Edit").Id" /></td>
+                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Delete").Id" /></td>
 
-                    <td>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</td>
-                    <td>@Html.ActionLink("Delete", "Delete", new { id = item.Id })</td>
-                    <td>@Html.ActionLink("Details", "", new { id = item.Id })</td>
+                    @*<td>@Html.CheckBox(item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Name,true)</td>
+                        <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "View").Name)</td>
+                        <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "Edit").Name)</td>
+                        <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "Delete").Name)</td>*@
                 </tr>
             }
 
     </table>
-
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
