--- a/OctagonPlatform/Views/Users/Edit.cshtml
+++ b/OctagonPlatform/Views/Users/Edit.cshtml
@@ -83,13 +83,19 @@
         <tbody>
             @foreach (var item in Model.SetOfPermissions)
             {
+                var valueCreate = @item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "Create").Id;
+                var valueView = @item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "View").Id;
+                var valueEdit = @item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "Edit").Id;
+                var valueDelete = @item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "Delete").Id;
+
+                var temp = Model.Permissions.FirstOrDefault().Id;
                 <tr>
                     <td>@Html.Label(item.Name)</td>
                     <td><input type="checkbox" name="Permissions1" value=" " /></td>
-                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Id" /></td>
-                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="View").Id" /></td>
-                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Edit").Id" /></td>
-                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Delete").Id" /></td>
+                    <td><input type="checkbox" checked="@(valueCreate == temp)):checked" name="Permissions1" value="@valueCreate" /></td>
+                    <td><input type="checkbox" name="Permissions1" value="@valueView" /></td>
+                    <td><input type="checkbox" name="Permissions1" value="@valueEdit" /></td>
+                    <td><input type="checkbox" name="Permissions1" value="@valueDelete" /></td>
 
                     @*<td>@Html.CheckBox(item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Name,true)</td>
                         <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "View").Name)</td>
