--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -11,7 +11,9 @@
 <p>
     @Html.ActionLink("Add Partner", "Create", "Partners", routeValues:null, htmlAttributes: new{@class = "btn btn-info" })
 </p>
-<h3>@ViewBag.Error</h3>
+<p class="alert alert-danger">
+    <strong>@ViewBag.Error</strong>
+</p>
 <table class="table table-striped table-hover ">
     
     <thead>
@@ -35,7 +37,8 @@
             <td>@item.Email</td>
             <td>@item.Status</td>
             <td>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
-            <td>@Html.ActionLink("Delete", "Delete", new { id = item.Id})</td>
+            <td>@Html.ActionLink("Delete", "Delete", new { id = item.Id},
+                    new { onclick = "return confirm('Are sure wants to delete?');"})</td>
             <td>@Html.ActionLink("Details", "Details", new {id = item.Id})</td>
         </tr>
     }
