--- a/OctagonPlatform/Views/PartnerContacts/Edit.cshtml
+++ b/OctagonPlatform/Views/PartnerContacts/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
-<h2>Edit</h2>
+<h2>Edit Contact</h2>
 
 @using (Html.BeginForm("Edit", "PartnerContacts"))
 {
@@ -17,6 +17,7 @@
     <p>@Html.ValidationSummary()</p>
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.Id)
+    @Html.HiddenFor(m => m.PartnerId)
     <div class="form-group">
         @Html.LabelFor(m => m.Name)
         @Html.TextBoxFor(m => m.Name, new { @class = "form-control", autofocus = "autofocus" })
@@ -28,14 +29,9 @@
         @Html.ValidationMessageFor(m => m.LastName)
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.PartnerId)
-        @Html.DropDownListFor(m => m.PartnerId, new SelectList(Model.Partners, "Id", "BusinessName"), "", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.PartnerId)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email)
-        @Html.EnumDropDownListFor(m => m.Email, "", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Email)
+        @Html.LabelFor(m => m.ContactTypeId)
+        @Html.DropDownListFor(m => m.ContactTypeId, new SelectList(Model.ContactTypes, "Id", "Name"), "", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.ContactTypeId)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Address1)
