--- a/OctagonPlatform/Views/PartnerContacts/Index.cshtml
+++ b/OctagonPlatform/Views/PartnerContacts/Index.cshtml
@@ -9,7 +9,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active">@Html.ActionLink("Add Contact", "Create", "PartnerContacts")</li>
+                <li class="active">@Html.ActionLink("Add Contact", "Create")</li>
 
 
             </ul>
@@ -31,33 +31,34 @@
 </p>
 <table class="table table-striped table-hover ">
     <thead>
-    <tr>
-        <th>Partner</th>
-        <th>Name</th>
-        <th>Last Name</th>
-        <th>Phone</th>
-        <th>Email</th>
-        <th>Addres</th>
-    </tr>
+        <tr>
+            <th>Partner</th>
+            <th>Name</th>
+            <th>Last Name</th>
+            <th>Phone</th>
+            <th>Email</th>
+            <th>Addres</th>
+        </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model)
-    {
-        <tr class="info">
-            <td>@item.Partner.BusinessName</td>
-            <td>@item.Name</td>
-            <td>@item.LastName</td>
-            <td>@item.Phone</td>
-            <td>@item.Email</td>
-            <td>@item.Address1</td>
-            <td>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
-            <td>@Html.ActionLink("Delete", "Delete", new { id = item.Id },
-                    new { onclick = "return confirm('Are sure wants to delete?');"})</td>
+        @foreach (var item in Model)
+        {
+            <tr class="info">
+                <td>@item.Partner.BusinessName</td>
+                <td>@item.Name</td>
+                <td>@item.LastName</td>
+                <td>@item.Phone</td>
+                <td>@item.Email</td>
+                <td>@item.Address1</td>
+                <td>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</td>
+                <td>
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id },
+                        new { onclick = "return confirm('Are sure wants to delete?');" })
+                </td>
             <td>@Html.ActionLink("Details", "", new { id = item.Id })</td>
         </tr>
-    }
-    
-</table> 
-        
+        }
+
+</table>
 
 
