--- a/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
@@ -1,1 +1,59 @@
-﻿<h1>General Infor</h1>
+﻿@model OctagonPlatform.Models.Partner
+
+<h2>General Info</h2>
+<div class="form-group">
+    @Html.LabelFor(m => m.BusinessName)
+    @Html.TextBoxFor(m => m.BusinessName, new { @class = "form-control", autofocus = "autofocus", @readonly = true})
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.ParentId)
+    @Html.TextBoxFor(m => m.Parent.BusinessName, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.Address1)
+    @Html.TextBoxFor(m => m.Address1, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.Address2)
+    @Html.TextBoxFor(m => m.Address2, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.CountryId)
+    @Html.TextBoxFor(m => m.Country.Name, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.StateId)
+    @Html.TextBoxFor(m => m.State.Name, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.CityId)
+    @Html.TextBoxFor(m => m.City.Name, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.CreatedAt)
+    @Html.TextBoxFor(m => m.CreatedAt, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.CreatedBy)
+    @Html.TextBoxFor(m => m.CreatedByName, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.UpdatedAt)
+    @Html.TextBoxFor(m => m.UpdatedAt, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.UpdatedBy)
+    @Html.TextBoxFor(m => m.UpdatedByName, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.Status)
+    @Html.TextBoxFor(m => m.Status, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.Email)
+    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
+<div class="form-group">
+    @Html.LabelFor(m => m.Mobile)
+    @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+</div>
