--- a/OctagonPlatform/Views/Users/Index.cshtml
+++ b/OctagonPlatform/Views/Users/Index.cshtml
@@ -34,7 +34,7 @@
             <td>@item.Status</td>
             <td>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
             <td>@Html.ActionLink("Delete", "Delete", new { id = item.Id })</td>
-            <td>@Html.ActionLink("Details", "", new { id = item.Id })</td>
+            <td>@Html.ActionLink("Details", "Details", new { id = item.Id })</td>
         </tr>
     }
     
