--- a/OctagonPlatform/Views/Users/Sections/GenralInfo.cshtml
+++ b/OctagonPlatform/Views/Users/Sections/GenralInfo.cshtml
@@ -1,1 +1,32 @@
-﻿<h1>General Info</h1>
+﻿@model OctagonPlatform.Models.User
+
+@Html.AntiForgeryToken()
+
+<div class="">
+    @Html.LabelFor(m => m.UserName)
+    @Model.UserName
+</div>
+<div class="">
+    @Html.LabelFor(m => m.Status)
+    @Model.Status
+</div>
+<div class="">
+    @Html.LabelFor(m => m.Name)
+    @Model.Name @Model.LastName
+</div>
+<div class="">
+    @Html.LabelFor(m => m.Email)
+    @Model.Email
+</div>
+<div class="">
+    @Html.LabelFor(m => m.Phone)
+    @Model.Phone
+</div>
+<div class="">
+    @Html.LabelFor(m => m.IsLocked)
+    @Model.IsLocked
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
