Contacts y GeneralInfo actuaizados

--- a/OctagonPlatform/Views/Partners/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Contacts.cshtml
@@ -1,5 +1,6 @@
 ﻿@model OctagonPlatform.Models.Partner
 
+<h2>Contacts</h2>
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -22,9 +23,6 @@
         </div>
     </div>
 </nav>
-<div class="page-header">
-    <h2 class="panel-title">List Contacts</h2>
-</div>
 <p class="alert alert-danger">
     <strong>@ViewBag.Error</strong>
 </p>
