--- a/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
@@ -1,6 +1,22 @@
 ﻿@model OctagonPlatform.Models.Partner
 
 <h2>General Info</h2>
+<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+        <li class="active">@Html.ActionLink(
+                               linkText: "Edit",
+                               actionName: "Edit",
+                               controllerName: "Partners",
+                               routeValues: new {
+                                   Id = Model.Id
+                               },
+                               htmlAttributes: null
+                               )</li>
+
+
+    </ul>
+            
+</div>
 <div class="form-group">
     @Html.LabelFor(m => m.BusinessName)
     @Html.TextBoxFor(m => m.BusinessName, new { @class = "form-control", autofocus = "autofocus", @readonly = true})
