--- a/OctagonPlatform/Views/Partners/Sections/Users.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Users.cshtml
@@ -1,1 +1,75 @@
-﻿<h1>Users</h1>
+﻿@model OctagonPlatform.Models.Partner
+
+<h2>Users</h2>
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    @Html.ActionLink(
+                                       linkText: "Add User",
+                                       actionName: "Create",
+                                       controllerName: "Users",
+                                       routeValues: new
+                                       {
+                                           partnerId = Model.Id
+                                       },
+                                       htmlAttributes: null
+                                       )
+            </li>
+
+
+        </ul>
+
+    </div>
+</div>
+</nav>
+<p class="alert alert-danger">
+    <strong>@ViewBag.Error</strong>
+</p>
+<table class="table table-striped table-hover ">
+    <thead>
+        <tr>
+            <th>Parent</th>
+            <th>Name</th>
+            <th>Last Name</th>
+            <th>Phone</th>
+            <th>Email</th>
+            <th>Status</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Users)
+        {
+            if (!item.Deleted)
+            {
+                <tr class="info">
+                    <td>@item.Partner.BusinessName</td>
+                    <td>@item.Name</td>
+                    <td>@item.LastName</td>
+                    <td>@item.Phone</td>
+                    <td>@item.Email</td>
+                    <td>@item.Status</td>
+                    
+                    <td>
+                        @Html.ActionLink(
+                        linkText: "Edit",
+                        actionName: "Edit",
+                        controllerName: "Users",
+                        routeValues: new
+                        {
+                            id = item.Id
+                        },
+                        htmlAttributes: null
+                        )
+                </td>
+                <td>
+                    @Html.ActionLink("Delete", "Delete", "Users", new { id = item.Id, partnerId = Model.Id }, new { onclick = "return confirm('Are sure wants to delete?');" })
+                </td>
+            </tr>
+            }
+        }
+
+</table>
