Populates LocationType, Make, Model

--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -14,7 +14,7 @@
                 <li class="active">@Html.ActionLink("Add Partner", "Create", "Partners")</li>
             </ul>
             <div class="form-group">
-            <input type="text" class="form-control" id="search" placeholder="Search" name="search" />
+            <input type="text" class="form-control" id="searchPartner" placeholder="Search" name="search" />
             </div> 
         </div>
     </div>
