--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -19,7 +19,13 @@
                 <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Terminals</a>
             </li>
             <li>
+                <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Terminals Contacts</a>
+            </li>
+            <li>
                 <a href="@Url.Action("Index", "Partners")"><i class="fa fa-table fa-fw"></i> Partners</a>
+            </li>
+            <li>
+                <a href="@Url.Action("Index", "PartnerContacts")"><i class="fa fa-table fa-fw"></i> Partners Contact</a>
             </li>
             <li>
                 <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Bank Accounts</a>
