--- a/OctagonPlatform/Views/PartnerContacts/Index.cshtml
+++ b/OctagonPlatform/Views/PartnerContacts/Index.cshtml
@@ -4,61 +4,64 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
+
+<h2>List Contacts</h2>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active">@Html.ActionLink("Add Contact", "Create")</li>
-
-
-            </ul>
+            
             <form class="navbar-form navbar-left form-group">
                 <div>
-                    <input type="text" class="form-control" placeholder="Search" name="search">
+                    <input type="text" id="searchPartnerContact" class="form-control" placeholder="Search" name="search">
                 </div>
-                <input type="submit" class="btn btn-adn" value="Search">
             </form>
 
         </div>
     </div>
 </nav>
-<div class="page-header">
-    <h3 class="panel-title">List Contacts</h3>
-</div>
+
+
 <p class="alert alert-danger">
     <strong>@ViewBag.Error</strong>
 </p>
 <table class="table table-striped table-hover ">
     <thead>
-        <tr>
-            <th>Partner</th>
-            <th>Name</th>
-            <th>Last Name</th>
-            <th>Phone</th>
-            <th>Email</th>
-            <th>Addres</th>
-        </tr>
+    <tr>
+        <th>Partner</th>
+        <th>Name</th>
+        <th>Last Name</th>
+        <th>Phone</th>
+        <th>Email</th>
+        <th>Addres</th>
+    </tr>
     </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr class="info">
-                <td>@item.Partner.BusinessName</td>
-                <td>@item.Name</td>
-                <td>@item.LastName</td>
-                <td>@item.Phone</td>
-                <td>@item.Email</td>
-                <td>@item.Address1</td>
-                <td>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</td>
-                <td>
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id },
-                        new { onclick = "return confirm('Are sure wants to delete?');" })
-                </td>
-            <td>@Html.ActionLink("Details", "", new { id = item.Id })</td>
+    <tbody id ="listOfPartnersContact">
+    @foreach (var item in Model)
+    {
+        <tr class="info">
+            <td>@item.Partner.BusinessName</td>
+            <td>@item.Name</td>
+            <td>@item.LastName</td>
+            <td>@item.Phone</td>
+            <td>@item.Email</td>
+            <td>@item.Address1</td>
+            <td>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</td>
+            <td>
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id, partnerId = item.PartnerId},
+                    new { onclick = "return confirm('Are sure wants to delete?');" })
+            </td>
         </tr>
-        }
+    }
 
 </table>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/search")
+}
+
+
+
+
 
 
