--- a/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
@@ -18,58 +18,48 @@
             
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.BusinessName)
-    @Html.TextBoxFor(m => m.BusinessName, new { @class = "form-control", autofocus = "autofocus", @readonly = true})
+
+    <label class="label-column">Business Name: @Model.BusinessName</label>
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.ParentId)
-    @Html.TextBoxFor(m => m.Parent.BusinessName, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+    <label class="label-column">ISO: @Model.Parent.BusinessName</label>
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.Address1)
-    @Html.TextBoxFor(m => m.Address1, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+    <label class="label-column">Address: @Model.Address1</label>
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.Address2)
-    @Html.TextBoxFor(m => m.Address2, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+    <label class="label-column">Address2: @Model.Address2</label>
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.CountryId)
-    @Html.TextBoxFor(m => m.Country.Name, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+    <label class="label-column">Country: @Model.Country.Name</label>
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.StateId)
-    @Html.TextBoxFor(m => m.State.Name, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+    <label class="label-column">State: @Model.State.Name</label>
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.CityId)
-    @Html.TextBoxFor(m => m.City.Name, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+    <label class="label-column">City: @Model.City.Name</label>
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.CreatedAt)
-    @Html.TextBoxFor(m => m.CreatedAt, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+    <label class="label-column">Created: @Model.CreatedAt</label>
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.CreatedBy)
-    @Html.TextBoxFor(m => m.CreatedByName, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+    <label class="label-column">CreatedBy: @Model.CreatedByName</label>
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.UpdatedAt)
-    @Html.TextBoxFor(m => m.UpdatedAt, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+    <label class="label-column">Created By: @Model.CreatedByName</label>
+</div>
+@if (Model.UpdatedAt != null)
+{
+    <div class="form-group">
+        <label class="label-column">Updated: @Model.UpdatedAt</label>
+    </div>
+}
+<div class="form-group">
+    <label class="label-column">Status: @Model.Status</label>
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.UpdatedBy)
-    @Html.TextBoxFor(m => m.UpdatedByName, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+    <label class="label-column">Email: @Model.Email</label>
 </div>
 <div class="form-group">
-    @Html.LabelFor(m => m.Status)
-    @Html.TextBoxFor(m => m.Status, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
-</div>
-<div class="form-group">
-    @Html.LabelFor(m => m.Email)
-    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
-</div>
-<div class="form-group">
-    @Html.LabelFor(m => m.Mobile)
-    @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control", autofocus = "autofocus", @readonly = true })
+    <label class="label-column">Mobile: @Model.Mobile</label>
 </div>
