--- a/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
@@ -1,1 +1,63 @@
-﻿<h1>Partners</h1>
+﻿
+@model OctagonPlatform.Models.Partner
+
+
+<h2>List of Partners</h2>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active">@Html.ActionLink(
+                                       linkText: "Add Partner",
+                                       actionName: "Create",
+                                       controllerName: "Partners",
+                                       routeValues: new
+                                       {
+                                           partnerId = Model.Id
+                                       },
+                                       htmlAttributes: null
+                                       )</li>
+            </ul>
+            
+        </div>
+    </div>
+</nav>
+
+<p class="alert alert-danger">
+    <strong>@ViewBag.Error</strong>
+</p>
+<table class="table table-striped table-hover ">
+    
+    <thead>
+    <tr class="danger">
+        <th>Parent</th>
+        <th>Business Name</th>
+        <th>Address</th>
+        <th>Phone</th>
+        <th>Email</th>
+        <th>Status</th>
+    </tr>
+    </thead>
+    <tbody id ="listOfPartners">
+    @foreach (var item in Model.Partners)
+    {
+        <tr class="active">
+            <td>@item.Parent.BusinessName</td>
+            <td>@item.BusinessName</td>
+            <td>@item.Address1</td>
+            <td>@item.Mobile</td>
+            <td>@item.Email</td>
+            <td>@item.Status</td>
+            <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
+            <td><i class="glyphicon glyphicon-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = item.Id},
+                                                             new {onclick = "return confirm('Are sure wants to delete?');"})</td>
+            
+        </tr>
+    }
+    </tbody>
+</table> 
+        
+@section Scripts {
+    @Scripts.Render("~/bundles/search")
+}
