Inclucion de CryptoCurrency transactions in Terminal

--- a/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
@@ -2,7 +2,7 @@
 @model OctagonPlatform.Models.Partner
 
 
-<h2>List of Partners</h2>
+<h2>Partners</h2>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         
